--- a/card/assets/css/style.css
+++ b/card/assets/css/style.css
@@ -8,30 +8,16 @@
 body,
 html {
     height: 100%;
-
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
-.container {
-    border: 5px solid black;
-
-}
-
+/* 
 .row {
     border: 3px solid rgb(164, 186, 233);
 }
 
 .col {
     border: 3px solid rgb(166, 226, 166);
-}
+} */
 
 .color-green {
     color: #496e66;
@@ -58,16 +44,20 @@ h6 {
 }
 
 .btn-purchase {
-    padding: 6px 13px;
-    background-color: rgb(239, 207, 240);
-    border-radius: 15px;
+    padding: 13px 28px;
+    background-color: #f5cfd0;
+    border-radius: 25px;
     border: 0;
 }
 
 .btn-share {
-    padding: 6px 13px;
-    background-color: #1d473e;
+    padding: 13px 28px;
+    background-color: #32574f;
     color: white;
-    border-radius: 15px;
+    border-radius: 25px;
     border: 0;
+}
+
+.bg-dark-green {
+    background-color: #32574f;
 }
