--- a/two-card/src/app/app.component.html
+++ b/two-card/src/app/app.component.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="#" class="btn btn-primary">See Details</a>
+                <a href="#" class="btn btn-primary fs-4">See Details</a>
             </div>
 
         </div>
@@ -36,10 +36,30 @@
 
 <!-- start : second card -->
 <div class="p-5">
-    <div class="second-card">
-        <p class="card-text">Course </p>
-        <h5 class="card-title fs-5 m-0">Digital
-            Marketing</h5>
+    <div class="second-card d-flex">
+        <div class="second-card-left p-5">
+            <p class="card-text text-light m-0">Course </p>
+            <h5 class="card-title fs-4 m-0 color-white my-3 text-w">Digital
+                Marketing</h5>
+            <p class="color-white text-light m-0">See all chapters <img src="../assets/images/arrow.png" alt="arrow"
+                    class="m-0"></p>
+        </div>
+        <div class="second-card-right p-5 flex-grow-1">
+            <div class="d-flex justify-content-between">
+                <p class="card-text m-0 fs-6">Chapter 10</p>
+                <div class="">
+                    <img src="../assets/images/Frame.png" alt="Frame m-0">
+                    <p class="card-text m-0 frame-text">03/10 completed</p>
+                </div>
+            </div>
+            <div class="card-title text-dark h1 text-with my-1">
+                Social Media Growth
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="btn btn-secondary">Next Chapter</button>
+            </div>
+        </div>
+
 
     </div>
 </div>
