--- a/horizontalcard/src/app/app.component.html
+++ b/horizontalcard/src/app/app.component.html
@@ -1,30 +1,30 @@
 <div class="container pt-5">
-    <div class="card mb-3 d-flex flex-column p-3 flex-md-row">
+    <div class="card mb-3 d-flex flex-column p-3 flex-md-row gap-3">
         <div>
-            <figure class="man-fig m-0">
-                <img src="../assets/images/man.png" class="img-fluid rounded man-img" alt="man">
+            <figure class="img-wrapper m-0">
+                <img src="../assets/images/man.png" class="img-fluid rounded man-img w-100 h-100" alt="man">
             </figure>
         </div>
-        <div class="flex-grow-1 px-3 d-flex flex-column justify-content-between my-3 m-md-0">
-            <div class="my-3 m-md-0">
+        <div class="d-flex flex-column m-md-0 flex-glow-1">
+            <div class="m-md-0 text-center text-md-start">
                 <h5 class="card-title fs-3 fw-bold m-0">John Doe</h5>
                 <p class="card-text fs-5 m-0">UI/UX Designer</p>
             </div>
-            <div class="card-content d-flex justify-content-around align-items-center flex-wrap">
-                <div>
-                    <p class="card-text fs-6 m-0 text-center">Views</p>
+            <div class="card-content row flex-wrap">
+                <div class="col-12 col-md-4 text-center">
+                    <p class="card-text fs-6 m-0">Views</p>
                     <p class="h3 m-0 my-2">17,653</p>
                 </div>
-                <div>
+                <div class="col-12 col-md-4 text-center">
                     <p class="card-text fs-6">Followers</p>
                     <p class="h3">373</p>
                 </div>
-                <div>
+                <div class="col-12 col-md-4 text-center">
                     <p class="card-text fs-6">Appreciations</p>
                     <p class="h3">17,653</p>
                 </div>
             </div>
-            <div class="d-flex justify-content-between my-3 m-md-0 flex-wrap">
+            <div class="d-flex justify-content-between m-md-0 flex-column flex-md-row gap-3">
                 <button class="btn btn-primary fs-5 px-5 py-2">Follow</button>
                 <button class="btn btn-outline-primary fs-5 fs-5 px-5 py2 mt-2 m-md-0">Connect</button>
             </div>
