--- a/dashboard/assets/css/style.css
+++ b/dashboard/assets/css/style.css
@@ -1,3 +1,4 @@
+/*scss variables */
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +13,6 @@ html {
   overflow: hidden;
 }
 
-/*scss variables */
 /*mixin */
 /*helper classes*/
 .d-flex {
@@ -103,6 +103,15 @@ html {
   padding-bottom: 1rem;
   padding-left: 0.5rem;
   flex-shrink: 0;
+  transition: 0.5s ease-in-out;
+  flex: 0 0 250px;
+}
+
+#toggle:checked + .sidebar {
+  transform: translateX(-250px);
+  width: 0;
+  transition: 0.5s ease-in-out;
+  flex: 0;
 }
 
 .text-title {
@@ -143,7 +152,7 @@ html {
   color: #f7f9fb;
   padding: 15px;
   width: 100%;
-  max-width: 290px;
+  max-width: 270px;
   margin: 10px;
   border-radius: 10px;
   box-shadow: 0px 1px 7px rgba(133, 133, 133, 0.2784313725);
