--- a/scss/dashboard/assets/scss/style.scss
+++ b/scss/dashboard/assets/scss/style.scss
@@ -1,3 +1,12 @@
+/*scss variables */
+
+$dark: #15181b;
+$bolddark: #000000;
+$light: #f7f9fb;
+$font-weight-bold: 700;
+$primary: #1bd2ec;
+$gray: #6284a3;
+
 * {
     margin: 0;
     padding: 0;
@@ -11,15 +20,6 @@ html {
     width: 100%;
     overflow: hidden;
 }
-
-/*scss variables */
-
-$dark: #15181b;
-$bolddark: #000000;
-$light: #f7f9fb;
-$font-weight-bold: 700;
-$primary: #1bd2ec;
-$gray: #6284a3;
 
 /*mixin */
 @mixin padding($top, $right, $bottom, $left) {
@@ -61,6 +61,7 @@ $gray: #6284a3;
 .margin-left-25 {
     margin-left: 25px;
 }
+
 
 .padding-top-15 {
     padding-top: 15px;
@@ -113,6 +114,15 @@ $gray: #6284a3;
     width: 250px;
     @include padding(1rem, 1rem, 1rem, 0.5rem);
     flex-shrink: 0;
+    transition: 0.5s ease-in-out;
+    flex: 0 0 250px;
+}
+
+#toggle:checked+.sidebar {
+    transform: translateX(-250px);
+    width: 0;
+    transition: 0.5s ease-in-out;
+    flex: 0;
 }
 
 .text-title {
@@ -158,7 +168,8 @@ $gray: #6284a3;
     color: $light;
     padding: 15px;
     width: 100%;
-    max-width: 290px;
+    max-width: 270px;
+    // flex-basis: 25%;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0px 1px 7px #85858547;
